@@ -160,7 +160,7 @@ MINSUPPLIES 1
 SHUTDOWNCMD "/sbin/shutdown -h +0"
 
 # --------------------------------------------------------------------------
-# SHUTDOWNEXIT <boolean>
+# SHUTDOWNEXIT <boolean|num>
 #
 # After initiating shutdown, should this upsmon daemon itself exit?
 # By doing so NUT secondary systems can tell the NUT primary that
@@ -184,6 +184,11 @@ SHUTDOWNCMD "/sbin/shutdown -h +0"
 # `upssched` integration, or `dummy-ups` driver with overrides for stricter
 # `battery.charge` or `battery.runtime` triggers than used by the rest of
 # your servers.
+#
+# This option supports Boolean-style strings (yes/on/true or no/off/false)
+# or numbers to define a delay (in seconds) between calling SHUTDOWNCMD
+# and exiting the daemon. Zero means immediate exit (default), negative
+# values mean never exiting on its own accord.
 #
 #SHUTDOWNEXIT yes
 
